# qr-code-gen

./: .gitignore  Cargo.toml  README.md  git-init.sh  git-push.sh  parsed.txt
src/: main.rs
src/generator/: bitstream.rs  data.rs  ecc.rs  encoder.rs  mod.rs  qr.rs
src/scanner/: mod.rs
testcases/: hello.txt  me.txt  you.txt
