[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding_rs = "0.8"
image = { version = "0.25.6", default-features = false, features = ["png", "jpeg"] }
rand = "0.9.1"
rqrr = "0.9.3"